# temporal-python-monorepo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  coverage.md  coverage.xml  pants.toml  pyproject.toml
.github/workflows/: AGENTS.md  ci-tests-coverage-and-app-image.yml  tests-and-coverage.yml
apps/demo-app/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
apps/demo-app/src/: BUILD
apps/demo-app/src/demo_app/: main.py
apps/demo-app/tests/: BUILD  test_main.py
apps/tryout-app/: Dockerfile  Makefile  README.md  pyproject.toml
apps/tryout-app/src/: BUILD
apps/tryout-app/src/tryout_app/: main.py
apps/tryout-app/tests/: BUILD  test_main.py
pkgs/converters/: Makefile  README.md  pyproject.toml
pkgs/converters/src/: BUILD
pkgs/converters/src/converters/: __init__.py
pkgs/converters/tests/: BUILD  test_converters.py
pkgs/quotes/: Makefile  README.md  pyproject.toml
pkgs/quotes/src/: BUILD
pkgs/quotes/src/quotes/: __init__.py
pkgs/quotes/tests/: BUILD  test_quotes.py
scripts/: validate_git_tags.py
