[project]
name = "roche-mono"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pdm]
distribution = false

[tool.pdm.workspace]
members = ["apps/*", "pkgs/*"]

[tool.uv.workspace]
members = ["apps/*", "pkgs/*"]

[tool.pytest.ini_options]
testpaths = [
	"apps/demo-app/tests",
	"pkgs/converters/tests",
	"pkgs/quotes/tests",
]
pythonpath = ["apps/demo-app/src", "pkgs/converters/src", "pkgs/quotes/src"]
