[project]
name = "tryout-app"
version = "0.1.0"
description = "Tryout app using shared quotes package"
authors = [{ name = "monorepo" }]
dependencies = ["quotes"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tryout_app"]

[tool.uv.sources]
quotes = { workspace = true }
